fix layout issue on homepage logo

--- a/src/styles/site/_homepage.styl
+++ b/src/styles/site/_homepage.styl
@@ -9,6 +9,7 @@
       bottom: rem(26.5px)
       transform none
       margin 0
+      padding 0
       text-align left
       z-index 5
 
